@@ -1,7 +1,7 @@
 "Name","Title","Description","Version","m.Date","m.Time","Author"
 "analyse_baSAR","Bayesian models (baSAR) applied on luminescence data","<br /> This function allows the application of Bayesian models on luminescence data, measured<br /> with the single-aliquot regenerative-dose (SAR, Murray and Wintle, 2000) protocol. In particular,<br /> it follows the idea proposed by Combes et al., 2015 of using an hierarchical model for estimating<br /> a central equivalent dose from a set of luminescence measurements. This function is (I) the adaption<br /> of this approach for the R environment and (II) an extension and a technical refinement of the<br /> published code. <br />","0.1.22","2016-06-29","16:01:02
 ","<br /> Norbert Mercier, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  <br /> <br /> The underlying Bayesian model based on a contribution by Combes et al., 2015.<br />  R Luminescence Package Team"
-"analyse_FadingMeasurement","Analyse fading measurements and returns the fading rate per decade (g-value)","<br /> The function analysis fading measurements and returns a fading rate including an error estimation.<br /> The function is not limited to standard fading measurements, as can be seen, e.g., Huntely and<br /> Lamothe 2001.<br />","0.1.0","2016-06-28","15:36:25
+"analyse_FadingMeasurement","Analyse fading measurements and returns the fading rate per decade (g-value)","<br /> The function analysis fading measurements and returns a fading rate including an error estimation.<br /> The function is not limited to standard fading measurements, as can be seen, e.g., Huntely and<br /> Lamothe 2001.<br />","0.1.0","2016-06-29","17:54:06
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team"
 "analyse_IRSAR.RF","Analyse IRSAR RF measurements","<br /> Function to analyse IRSAR RF measurements on K-feldspar samples, performed<br /> using the protocol according to Erfurt et al. (2003) and beyond.<br />","0.6.9","2016-05-27","10:40:45
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team"
@@ -122,7 +122,7 @@
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team"
 "plot_FilterCombinations","Plot filter combinations along with net transmission window","<br /> The function allows to plot transmission windows for different filters. Missing data for specific<br /> wavelenghts are automatically interpolated for the given filter data using the function  approx .<br /> With that a standardised output is reached and a net transmission window can be shown. <br />","0.1.0","2016-05-02","09:36:06
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montagine (France) <br />  R Luminescence Package Team"
-"plot_GrowthCurve","Fit and plot a growth curve for luminescence data (Lx/Tx against dose)","<br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />","1.8.14","2016-06-28","13:16:03
+"plot_GrowthCurve","Fit and plot a growth curve for luminescence data (Lx/Tx against dose)","<br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />","1.8.15","2016-06-29","18:17:16
 ","<br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team"
 "plot_Histogram","Plot a histogram with separate error plot","<br /> Function plots a predefined histogram with an accompanying error plot as<br /> suggested by Rex Galbraith at the UK LED in Oxford 2010.<br />","0.4.4","2016-06-28","13:16:03
 ","<br /> Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,<br /> IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team"
