@@ -82,9 +82,9 @@
 </td>
 <td class=cellinside>0.1.0
 </td>
-<td class=cellinside>2016-06-28
+<td class=cellinside>2016-06-29
 </td>
-<td class=cellinside>15:36:25
+<td class=cellinside>17:54:06
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)<br />  R Luminescence Package Team
@@ -1340,11 +1340,11 @@
 </td>
 <td class=cellinside><br /> A dose response curve is produced for luminescence measurements using a<br /> regenerative protocol.<br />
 </td>
-<td class=cellinside>1.8.14
+<td class=cellinside>1.8.15
 </td>
-<td class=cellinside>2016-06-28
+<td class=cellinside>2016-06-29
 </td>
-<td class=cellinside>13:16:03
+<td class=cellinside>18:17:16
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France),   Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
