@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Wed Jun 29 16:04:25 2016
+% Wed Jun 29 18:30:22 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -8,7 +8,7 @@
   \hline
 1 & analyse\_baSAR & Bayesian models (baSAR) applied on luminescence data & $<$br /$>$ This function allows the application of Bayesian models on luminescence data, measured$<$br /$>$ with the single-aliquot regenerative-dose (SAR, Murray and Wintle, 2000) protocol. In particular,$<$br /$>$ it follows the idea proposed by Combes et al., 2015 of using an hierarchical model for estimating$<$br /$>$ a central equivalent dose from a set of luminescence measurements. This function is (I) the adaption$<$br /$>$ of this approach for the R environment and (II) an extension and a technical refinement of the$<$br /$>$ published code. $<$br /$>$ & 0.1.22 & 2016-06-29 & 16:01:02
  & $<$br /$>$ Norbert Mercier, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France), Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  $<$br /$>$ $<$br /$>$ The underlying Bayesian model based on a contribution by Combes et al., 2015.$<$br /$>$  R Luminescence Package Team \\ 
-  2 & analyse\_FadingMeasurement & Analyse fading measurements and returns the fading rate per decade (g-value) & $<$br /$>$ The function analysis fading measurements and returns a fading rate including an error estimation.$<$br /$>$ The function is not limited to standard fading measurements, as can be seen, e.g., Huntely and$<$br /$>$ Lamothe 2001.$<$br /$>$ & 0.1.0 & 2016-06-28 & 15:36:25
+  2 & analyse\_FadingMeasurement & Analyse fading measurements and returns the fading rate per decade (g-value) & $<$br /$>$ The function analysis fading measurements and returns a fading rate including an error estimation.$<$br /$>$ The function is not limited to standard fading measurements, as can be seen, e.g., Huntely and$<$br /$>$ Lamothe 2001.$<$br /$>$ & 0.1.0 & 2016-06-29 & 17:54:06
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
   3 & analyse\_IRSAR.RF & Analyse IRSAR RF measurements & $<$br /$>$ Function to analyse IRSAR RF measurements on K-feldspar samples, performed$<$br /$>$ using the protocol according to Erfurt et al. (2003) and beyond.$<$br /$>$ & 0.6.9 & 2016-05-27 & 10:40:45
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -129,7 +129,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France), Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   68 & plot\_FilterCombinations & Plot filter combinations along with net transmission window & $<$br /$>$ The function allows to plot transmission windows for different filters. Missing data for specific$<$br /$>$ wavelenghts are automatically interpolated for the given filter data using the function  approx .$<$br /$>$ With that a standardised output is reached and a net transmission window can be shown. $<$br /$>$ & 0.1.0 & 2016-05-02 & 09:36:06
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montagine (France) $<$br /$>$  R Luminescence Package Team \\ 
-  69 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.14 & 2016-06-28 & 13:16:03
+  69 & plot\_GrowthCurve & Fit and plot a growth curve for luminescence data (Lx/Tx against dose) & $<$br /$>$ A dose response curve is produced for luminescence measurements using a$<$br /$>$ regenerative protocol.$<$br /$>$ & 1.8.15 & 2016-06-29 & 18:17:16
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),   Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
   70 & plot\_Histogram & Plot a histogram with separate error plot & $<$br /$>$ Function plots a predefined histogram with an accompanying error plot as$<$br /$>$ suggested by Rex Galbraith at the UK LED in Oxford 2010.$<$br /$>$ & 0.4.4 & 2016-06-28 & 13:16:03
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),   Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
